<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".SimpleActivity">

    <TextView
        android:id="@+id/calcTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textAlignment="viewEnd"
        android:textColor="@color/white"
        android:textSize="@dimen/simple_text"
        android:maxLines="1"
        android:scrollHorizontally="true"
        app:layout_constraintBottom_toTopOf="@+id/clearButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/clearButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/c"
        android:textColor="@color/white"
        android:backgroundTint="#776F6F"
        android:layout_margin="5dp"
        android:onClick="clearButtonOnClick"
        app:cornerRadius="10dp"
        android:textSize="@dimen/simple_button"
        app:layout_constraintBottom_toTopOf="@+id/sevenButton"
        app:layout_constraintEnd_toStartOf="@+id/divisionButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calcTextView" />

    <Button
        android:id="@+id/divisionButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/division"
        android:textColor="@color/white"
        android:backgroundTint="#776F6F"
        android:layout_margin="5dp"
        android:onClick="divisionButtonOnClick"
        app:cornerRadius="10dp"
        android:textSize="@dimen/simple_button"
        app:layout_constraintTop_toBottomOf="@+id/calcTextView"
        app:layout_constraintStart_toEndOf="@+id/clearButton"
        app:layout_constraintEnd_toStartOf="@+id/multiplicationButton"
        app:layout_constraintBottom_toTopOf="@+id/eightButton"/>

    <Button
        android:id="@+id/multiplicationButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/multiplication"
        android:textColor="@color/white"
        android:backgroundTint="#776F6F"
        android:layout_margin="5dp"
        android:onClick="multiplicationButtonOnClick"
        app:cornerRadius="10dp"
        android:textSize="@dimen/simple_button"
        app:layout_constraintTop_toBottomOf="@+id/calcTextView"
        app:layout_constraintStart_toEndOf="@+id/divisionButton"
        app:layout_constraintEnd_toStartOf="@+id/backspaceButton"
        app:layout_constraintBottom_toTopOf="@+id/nineButton"/>

    <Button
        android:id="@+id/backspaceButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/backspace"
        android:textColor="@color/white"
        android:backgroundTint="#776F6F"
        android:layout_margin="5dp"
        android:onClick="backspaceButtonOnClick"
        app:cornerRadius="10dp"
        android:textSize="@dimen/simple_button"
        app:layout_constraintTop_toBottomOf="@+id/calcTextView"
        app:layout_constraintStart_toEndOf="@+id/multiplicationButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/minusButton"
        app:layout_constraintVertical_weight="1"/>




    <Button
        android:id="@+id/sevenButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/seven"
        android:textColor="@color/white"
        android:backgroundTint="#776F6F"
        android:layout_margin="5dp"
        android:onClick="numberButtonOnClick"
        app:cornerRadius="10dp"
        android:textSize="@dimen/simple_button"
        app:layout_constraintTop_toBottomOf="@+id/clearButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/eightButton"
        app:layout_constraintBottom_toTopOf="@+id/fourButton"/>

    <Button
        android:id="@+id/eightButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/eight"
        android:textColor="@color/white"
        android:backgroundTint="#776F6F"
        android:layout_margin="5dp"
        android:onClick="numberButtonOnClick"
        app:cornerRadius="10dp"
        android:textSize="@dimen/simple_button"
        app:layout_constraintTop_toBottomOf="@+id/divisionButton"
        app:layout_constraintStart_toEndOf="@+id/sevenButton"
        app:layout_constraintEnd_toStartOf="@+id/nineButton"
        app:layout_constraintBottom_toTopOf="@+id/fiveButton"/>

    <Button
        android:id="@+id/nineButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/nine"
        android:textColor="@color/white"
        android:backgroundTint="#776F6F"
        android:layout_margin="5dp"
        android:onClick="numberButtonOnClick"
        app:cornerRadius="10dp"
        android:textSize="@dimen/simple_button"
        app:layout_constraintTop_toBottomOf="@+id/multiplicationButton"
        app:layout_constraintStart_toEndOf="@+id/eightButton"
        app:layout_constraintEnd_toStartOf="@+id/minusButton"
        app:layout_constraintBottom_toTopOf="@+id/sixButton"/>

    <Button
        android:id="@+id/minusButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/minus"
        android:textColor="@color/white"
        android:backgroundTint="#776F6F"
        android:layout_margin="5dp"
        android:onClick="minusButtonOnClick"
        app:cornerRadius="10dp"
        android:textSize="@dimen/simple_button"
        app:layout_constraintTop_toBottomOf="@+id/backspaceButton"
        app:layout_constraintStart_toEndOf="@+id/nineButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/plusButton"
        app:layout_constraintVertical_weight="1"/>



    <Button
        android:id="@+id/fourButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/four"
        android:textColor="@color/white"
        android:backgroundTint="#776F6F"
        android:layout_margin="5dp"
        android:onClick="numberButtonOnClick"
        app:cornerRadius="10dp"
        android:textSize="@dimen/simple_button"
        app:layout_constraintTop_toBottomOf="@+id/sevenButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fiveButton"
        app:layout_constraintBottom_toTopOf="@+id/oneButton"/>

    <Button
        android:id="@+id/fiveButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/five"
        android:textColor="@color/white"
        android:backgroundTint="#776F6F"
        android:layout_margin="5dp"
        android:onClick="numberButtonOnClick"
        app:cornerRadius="10dp"
        android:textSize="@dimen/simple_button"
        app:layout_constraintTop_toBottomOf="@+id/eightButton"
        app:layout_constraintStart_toEndOf="@+id/fourButton"
        app:layout_constraintEnd_toStartOf="@+id/sixButton"
        app:layout_constraintBottom_toTopOf="@+id/twoButton"/>

    <Button
        android:id="@+id/sixButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/six"
        android:textColor="@color/white"
        android:backgroundTint="#776F6F"
        android:layout_margin="5dp"
        android:onClick="numberButtonOnClick"
        app:cornerRadius="10dp"
        android:textSize="@dimen/simple_button"
        app:layout_constraintTop_toBottomOf="@+id/nineButton"
        app:layout_constraintStart_toEndOf="@+id/fiveButton"
        app:layout_constraintEnd_toStartOf="@+id/plusButton"
        app:layout_constraintBottom_toTopOf="@+id/threeButton"/>

    <Button
        android:id="@+id/plusButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/plus"
        android:textColor="@color/white"
        android:backgroundTint="#776F6F"
        android:layout_margin="5dp"
        android:onClick="plusButtonOnClick"
        app:cornerRadius="10dp"
        android:textSize="@dimen/simple_button"
        app:layout_constraintTop_toBottomOf="@+id/minusButton"
        app:layout_constraintStart_toEndOf="@+id/sixButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/equalButton"
        app:layout_constraintVertical_weight="1"/>



    <Button
        android:id="@+id/oneButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/one"
        android:textColor="@color/white"
        android:backgroundTint="#776F6F"
        android:layout_margin="5dp"
        android:onClick="numberButtonOnClick"
        app:cornerRadius="10dp"
        android:textSize="@dimen/simple_button"
        app:layout_constraintTop_toBottomOf="@+id/fourButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/twoButton"
        app:layout_constraintBottom_toTopOf="@+id/signButton"/>

    <Button
        android:id="@+id/twoButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/two"
        android:textColor="@color/white"
        android:backgroundTint="#776F6F"
        android:layout_margin="5dp"
        android:onClick="numberButtonOnClick"
        app:cornerRadius="10dp"
        android:textSize="@dimen/simple_button"
        app:layout_constraintTop_toBottomOf="@+id/fiveButton"
        app:layout_constraintStart_toEndOf="@+id/oneButton"
        app:layout_constraintEnd_toStartOf="@+id/threeButton"
        app:layout_constraintBottom_toTopOf="@+id/zeroButton"/>

    <Button
        android:id="@+id/threeButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/three"
        android:textColor="@color/white"
        android:backgroundTint="#776F6F"
        android:layout_margin="5dp"
        android:onClick="numberButtonOnClick"
        app:cornerRadius="10dp"
        android:textSize="@dimen/simple_button"
        app:layout_constraintTop_toBottomOf="@+id/sixButton"
        app:layout_constraintStart_toEndOf="@+id/twoButton"
        app:layout_constraintEnd_toStartOf="@+id/equalButton"
        app:layout_constraintBottom_toTopOf="@+id/dotButton"/>

    <Button
        android:id="@+id/equalButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/equal"
        android:textColor="@color/white"
        android:backgroundTint="#776F6F"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="5dp"
        android:onClick="equalButtonOnClick"
        app:cornerRadius="10dp"
        android:textSize="@dimen/simple_button"
        app:layout_constraintTop_toBottomOf="@+id/plusButton"
        app:layout_constraintStart_toEndOf="@+id/threeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_weight="2"/>


    <Button
        android:id="@+id/signButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/sign"
        android:textColor="@color/white"
        android:backgroundTint="#776F6F"
        android:layout_margin="5dp"
        android:onClick="signButtonOnClick"
        app:cornerRadius="10dp"
        android:textSize="@dimen/simple_button"
        app:layout_constraintTop_toBottomOf="@+id/oneButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/zeroButton"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/zeroButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/zero"
        android:textColor="@color/white"
        android:backgroundTint="#776F6F"
        android:layout_margin="5dp"
        android:onClick="numberButtonOnClick"
        app:cornerRadius="10dp"
        android:textSize="@dimen/simple_button"
        app:layout_constraintTop_toBottomOf="@+id/twoButton"
        app:layout_constraintStart_toEndOf="@+id/signButton"
        app:layout_constraintEnd_toStartOf="@+id/dotButton"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/dotButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/dot"
        android:textColor="@color/white"
        android:backgroundTint="#776F6F"
        android:layout_marginVertical="5dp"
        android:layout_marginStart="5dp"
        android:onClick="dotButtonOnClick"
        app:cornerRadius="10dp"
        android:textSize="@dimen/simple_button"
        app:layout_constraintTop_toBottomOf="@+id/threeButton"
        app:layout_constraintStart_toEndOf="@+id/zeroButton"
        app:layout_constraintEnd_toEndOf="@+id/threeButton"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>