<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".AboutActivity">

    <LinearLayout
        android:layout_width="@dimen/layout"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculator"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_marginBottom="50dp"
            android:textSize="@dimen/advanced_text"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_marginBottom="20dp"
            android:textSize="@dimen/advanced_button"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/author"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_marginBottom="20dp"
            android:textSize="@dimen/advanced_button"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>